        Function readSigList(), readIsoSigList():
            - The old readIsoSigList() is now deprecated, in favour of a new
              template function readSigList() that can work with knots and
              also triangulations of any dimension.  The old readIsoSigList()
              has been kept as a deprecated alias.
            - Now returns a shared_ptr instead of a raw pointer.
        Function smithNormalForm(), metricalSmithNormalForm():
            - The change of basis matrices no longer need to have the correct
              size (and may even be uninitialised) before they are passed in.
            - The change of basis matrices are now passed by reference, which
              means for metricalSmithNormalForm() they are no longer optional.
        Function stringToToken()
            - Replaced the two overloads with a single function that
              takes a std::string by value, for better move optimisation.
        Function tightEncode(), tightEncoding():
            - New global function to help with perfect hashes of different
              types of integers.
        Function torsionAutInverse():
            - Now returns a MatrixInt by value.
        Function valueOf():
            - The Integer / LargeInteger variants are deprecated.  Just use the
              (Large)Integer assignment operator inside a try/catch block.
        Global constants base64Table, base64Spare:
            - Added to support the base64 encoding/decoding routines.
        Global constant packetTypeHolds<T>:
            - Added to support compile-time conversion from types held by
              packet wrappers to the corresponding packet type constants.
        Global arrays quadSeparating, quadMeeting, quadDefn, quadPartner,
                quadString:
            - These are all now inline constexpr.
        Global arrays triDiscArcs, quadDiscArcs, octDiscArcs:
            - These are all now inline constexpr.