@@ -175,7 +175,7 @@ class NotImplemented : public ReginaException {
 };
 
 /**
- * An exception thrown when trying to access data from an installed file.
+ * An exception thrown when trying to access data from the filesystem.
  *
  * This could occur, for instance, when trying to read data from the
  * Regina or SnapPea census databases.
